<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/search_hint"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh_black_24dp" />
    <item
        android:id="@+id/action_clear"
        android:title="@string/action_clear"
        android:icon="@drawable/ic_clear_all_black_24dp"
        android:visible="false" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_black_24dp" />
</menu>
