<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/placeholder_list_compact" />
    <LinearLayout
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/empty_icon"
                android:layout_width="@dimen/iconVeryLarge"
                android:layout_height="@dimen/iconVeryLarge"
                android:layout_margin="@dimen/space16"
                android:layout_gravity="center_horizontal|bottom"
                android:tint="?attr/placeholderTextColor"
                tools:srcCompat="@drawable/ic_empty_news_black_24dp" />
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/space16"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/empty_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space8"
                android:gravity="center_horizontal"
                android:textColor="?attr/placeholderTextColor"
                android:textSize="@dimen/textLarge"
                tools:text="@string/empty_news_title" />
            <TextView
                android:id="@+id/empty_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space8"
                android:gravity="center_horizontal"
                android:textColor="?attr/placeholderTextColor"
                android:textSize="@dimen/textNormal"
                tools:text="@string/empty_news_description" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/empty_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space8"
                tools:text="@string/empty_news_action" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
