<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable
            name="model"
            type="com.github.ayltai.hknews.data.view.EmptyViewModel" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:elevation="@dimen/elevation"
                app:elevation="@dimen/elevation"
                app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
                style="@style/Toolbar"
                tools:targetApi="LOLLIPOP">
                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
            <FrameLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <ScrollView
                    android:id="@android:id/empty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1">
                            <ImageView
                                android:layout_width="@dimen/iconVeryLarge"
                                android:layout_height="@dimen/iconVeryLarge"
                                android:layout_margin="@dimen/space16"
                                android:layout_gravity="center_horizontal|bottom"
                                android:tint="?attr/placeholderTextColor"
                                android:src="@{model.icon}"
                                tools:srcCompat="@drawable/ic_empty_news_black_24dp" />
                        </FrameLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_margin="@dimen/space16"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/space8"
                                android:gravity="center_horizontal"
                                android:textColor="?attr/placeholderTextColor"
                                android:textSize="@dimen/textLarge"
                                android:text="@{model.title}"
                                tools:text="@string/empty_news_title" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/space8"
                                android:gravity="center_horizontal"
                                android:textColor="?attr/placeholderTextColor"
                                android:textSize="@dimen/textNormal"
                                android:text="@{model.description}"
                                tools:text="@string/empty_news_description" />
                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/empty_action"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/space8"
                                android:visibility="@{model.action > 0 ? View.VISIBLE : View.GONE}"
                                app:emptyAction="@{model.action}"
                                tools:text="@string/empty_news_action" />
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>
                <ViewStub
                    android:id="@+id/placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </FrameLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
