<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="model"
            type="com.github.ayltai.hknews.data.view.EmptyViewModel" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/appBackground">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                app:elevation="0dp"
                style="@style/Toolbar" />
            <com.google.android.material.navigation.NavigationView
                android:id="@+id/category_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/appBackground"
                app:elevation="0dp"
                app:itemBackground="@drawable/bg_menu_item"
                app:itemTextAppearance="@style/Title.Menu"
                app:itemTextColor="@color/white"
                app:itemIconTint="@color/white"
                app:menu="@menu/categories" />
        </com.google.android.material.appbar.AppBarLayout>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/bottomNavigationView"
            app:layout_behavior=".widget.BackdropBehavior"
            app:cardElevation="1dp"
            app:cardCornerRadius="16dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:divider="?android:attr/dividerHorizontal"
                app:showDividers="middle">
                <TextView
                    android:id="@+id/subheader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/space16"
                    tools:text="@tools:sample/cities"
                    style="@style/TextAppearance.AppCompat.Subhead" />
                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/swipeRefreshLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".app.ListFragment">
                    <FrameLayout
                        android:id="@+id/container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?attr/windowBackground" />
                        <ScrollView
                            android:id="@android:id/empty"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fillViewport="true">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <FrameLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1">
                                    <ImageView
                                        android:layout_width="@dimen/iconVeryLarge"
                                        android:layout_height="@dimen/iconVeryLarge"
                                        android:layout_margin="@dimen/space16"
                                        android:layout_gravity="center_horizontal|bottom"
                                        android:tint="?attr/placeholderTextColor"
                                        android:src="@{model.icon}"
                                        tools:srcCompat="@drawable/ic_empty_news_black_24dp" />
                                </FrameLayout>
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_margin="@dimen/space16"
                                    android:layout_weight="1"
                                    android:gravity="center_horizontal"
                                    android:orientation="vertical">
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="@dimen/space8"
                                        android:gravity="center_horizontal"
                                        android:textColor="?attr/placeholderTextColor"
                                        android:textSize="@dimen/textLarge"
                                        android:text="@{model.title}"
                                        tools:text="@string/empty_news_title" />
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="@dimen/space8"
                                        android:gravity="center_horizontal"
                                        android:textColor="?attr/placeholderTextColor"
                                        android:textSize="@dimen/textNormal"
                                        android:text="@{model.description}"
                                        tools:text="@string/empty_news_description" />
                                    <com.google.android.material.button.MaterialButton
                                        android:id="@+id/empty_action"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="@dimen/space8"
                                        android:text="@{model.action}"
                                        tools:text="@string/empty_news_action" />
                                </LinearLayout>
                            </LinearLayout>
                        </ScrollView>
                        <ViewStub
                            android:id="@+id/placeholder"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </FrameLayout>
                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
